--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -39,7 +39,8 @@ nav:
             - PA 4-1 来自外部的声音: cs/ics/pa/ics_pa-4-1.md
             - PA 4-2 冯诺依曼的构想: cs/ics/pa/ics_pa-4-2.md
             - PA 4-3 编写不朽的传奇: cs/ics/pa/ics_pa-4-3.md
-    
+      - DSA:
+        - DSA: cs/dsa/dsa.md
     - Sec:
       - Sec: sec/index.md
 
