--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -11,6 +11,11 @@ nav:
       - 疾旋鼬: people/jxy.md
     - FE:
       - FE: fe/index.md
+      - 财务会计与管理决策: fe/famd/index.md
+      - 固定收益证券: fe/fis/index.md
+      - 金融软件工程: fe/fse/index.md
+      - 货币银行学: fe/mb/index.md
+      - 经济学原理: fe/pe/index.md
     - IE:
       - IE: ie/index.md
     - Auto:
@@ -39,8 +44,6 @@ nav:
             - PA 4-1 来自外部的声音: cs/ics/pa/ics_pa-4-1.md
             - PA 4-2 冯诺依曼的构想: cs/ics/pa/ics_pa-4-2.md
             - PA 4-3 编写不朽的传奇: cs/ics/pa/ics_pa-4-3.md
-      - DSA:
-        - DSA: cs/dsa/dsa.md
       - ICS_RISCV:
         - 简介: cs/ics_riscv/index.md
         - 课程介绍: cs/ics_riscv/course_intro/index.md
@@ -50,6 +53,11 @@ nav:
         - labs:
           - 编写内容介绍: cs/ics_riscv/labs/index.md
         - 理论课: cs/ics_riscv/theory/index.md
+      - DSA: cs/dsa/dsa.md
+      - 离散数学: cs/dm/index.md
+      - 面向对象: cs/fop/index.md
+    - General:
+      - 简介: general/index.md
     - Sec:
       - Sec: sec/index.md
 
