--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -57,6 +57,8 @@ nav:
         - 编写宗旨: cs/ics_riscv/guidelines/index.md
         - PA:
           - 编写内容介绍: cs/ics_riscv/PA/index.md
+          - PA0：开始之前: cs/ics_riscv/PA/PA0_1.md
+          - PA0：初识 Linux: cs/ics_riscv/PA/PA0_2.md
         - labs:
           - 编写内容介绍: cs/ics_riscv/labs/index.md
         - 理论课: cs/ics_riscv/theory/index.md
