--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
           - PA0：开始之前: cs/ics_riscv/PA/PA0_1.md
           - PA0：初识 Linux: cs/ics_riscv/PA/PA0_2.md
           - PA0：关于 Vim: cs/ics_riscv/PA/PA0_3.md
+          - PA0：与 AI 交互: cs/ics_riscv/PA/PA0_4.md
         - labs:
           - 编写内容介绍: cs/ics_riscv/labs/index.md
         - 理论课: cs/ics_riscv/theory/index.md
