add content of PA1_5, fix some expression mistake

--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -63,6 +63,7 @@ nav:
           - PA0：与 AI 交互: cs/ics_riscv/PA/PA0_4.md
           - PA1：准备工作: cs/ics_riscv/PA/PA1_1.md
           - PA1：对计算机的抽象: cs/ics_riscv/PA/PA1_2.md
+          - PA1： NEMU 代码导读: cs/ics_riscv/PA/PA1_3.md
         - PA+:
           - 简介: cs/ics_riscv/PA_plus/index.md
         - PA现场赛:
