--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -65,6 +65,7 @@ nav:
           - PA1：对计算机的抽象: cs/ics_riscv/PA/PA1_2.md
           - PA1： NEMU 代码导读: cs/ics_riscv/PA/PA1_3.md
           - PA1：表达式求值：编译器与软件测试: cs/ics_riscv/PA/PA1_4.md
+          - PA1：旅行伙伴加入： fuck'n fish: cs/ics_riscv/PA/PA1_5.md
         - PA+:
           - 简介: cs/ics_riscv/PA_plus/index.md
         - PA现场赛:
