--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
           - PA1： NEMU 代码导读: cs/ics_riscv/PA/PA1_3.md
           - PA1：表达式求值：编译器与软件测试: cs/ics_riscv/PA/PA1_4.md
           - PA1：旅行伙伴加入： fuck'n fish: cs/ics_riscv/PA/PA1_5.md
+          - PA2：回顾：计算机系统: cs/ics_riscv/PA/PA2_1.md
         - PA+:
           - 简介: cs/ics_riscv/PA_plus/index.md
           - PA+1：表达式生成器: cs/ics_riscv/PA_plus/PA_plus1.md
