--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -99,7 +99,6 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
 
-
 theme:
   name: material
   favicon: pic/logo.png  # 图标路径
@@ -123,12 +122,10 @@ theme:
 
 
 extra_javascript:
-  - javascripts/katex.js
-  - https://unpkg.com/katex@0/dist/katex.min.js
-  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - javascripts/mathjax-config.js
 
-extra_css:
-  - https://unpkg.com/katex@0/dist/katex.min.css
 
 plugins:
   - git-revision-date-localized:
