--- a/_smewin/mkdocs.yml
+++ b/_smewin/mkdocs.yml
@@ -35,10 +35,10 @@ nav:
           - ICS: cs/ics/ics_pre.md
           - ICS_Cheat_Sheet: cs/ics/cheat_sheet.md
           - ICS_理论试题选解:
-            - 第4章 程序的链接: cs/ics/theory/ICS-04/
-            - 第6章 层次结构存储系统: cs/ics/theory/ICS-06/
-            - 第7章 异常控制流: cs/ics/theory/ICS-07/
-            - 第8章 I/O操作的实现: cs/ics/theory/ICS-08/
+            - 第4章 程序的链接: cs/ics/theory/ICS-04.md
+            - 第6章 层次结构存储系统: cs/ics/theory/ICS-06.md
+            - 第7章 异常控制流: cs/ics/theory/ICS-07.md
+            - 第8章 I/O操作的实现: cs/ics/theory/ICS-08.md
           - ICS_PA(x86): 
             - 在PA开始之前（x86）: cs/ics/ics_pa_pre.md
             - PA 1-1 世界诞生的前夜: cs/ics/pa/ics_pa-1-1.md
